--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 
 .matchup {
-  background-image: url('images/wallpaper.jpg');
+  /* background-image: url('images/wallpaper.jpg'); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
