--- a/src/components/championList.js/championList.css
+++ b/src/components/championList.js/championList.css
@@ -12,6 +12,10 @@
     display: inline-block;
 }
 
+.item img {
+    width: 15vh;
+}
+
 .champion-label {
     font-size: 2.5vmin;
     text-align: center;
